<resources>
    <string name="app_name">Levelty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks">Tasks</string>
    <string name="content_tasks">content_tasks</string>
    <string name="settings">Settings</string>
    <string name="content_settings">content_settings</string>
    <string name="profile">Profile</string>
    <string name="content_profile">content_profile</string>
    <string name="content_goals">content_goals</string>
    <string name="add_new_task">Add new task</string>
    <string name="start_time">Start time</string>
    <string name="repeat">Repeat</string>
    <string name="date">*Date</string>
    <string name="points">Points</string>
    <string name="category">Category</string>
    <string name="task">*Task</string>
    <string name="today">Today</string>
    <string name="categories">Categories</string>
    <string name="new_task_in_this_category">New task in this category</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="all_tasks">All Tasks</string>
    <string name="current_date">Current date</string>
    <string name="need_approval">Need approval</string>
    <string name="kid_s_interests">Kid\'s interests</string>
    <string name="no_tasks_on_this_date">No tasks on this date</string>
    <string name="no_tasks_yet">No tasks yet</string>
    <string name="set_task">Set task</string>
    <string name="client_error">Authorization error</string>
    <string name="server_error">Network error</string>
    <string name="internet_error">Internet connection error</string>
    <string name="image_of_child">Image of child</string>
</resources>