<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presenter.ui.MainActivity" >

    <group>
        <item
            android:id="@+id/parent_tasks"
            android:icon="@drawable/tasks_color_selector"
            android:title="@string/tasks"
            android:contentDescription="@string/content_tasks"
            app:showAsAction="ifRoom|withText"
            />
        <item
            android:id="@+id/parent_profile"
            android:icon="@drawable/profile_color_selector"
            android:title="@string/profile"
            app:itemTextColor="@color/black"
            android:contentDescription="@string/content_profile"
            app:showAsAction="always|withText"
            />
        <item
            android:id="@+id/parent_settings"
            android:icon="@drawable/settings_color_selector"
            android:title="@string/settings"
            android:contentDescription="@string/content_settings"
            app:showAsAction="ifRoom|withText"
            />

    </group>



</menu>