<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presenter.ui.MainActivity">

    <group>
        <item
            android:id="@+id/kid_tasks"
            android:contentDescription="@string/content_tasks"
            android:icon="@drawable/tasks_color_selector"
            android:title="@string/tasks"

            app:itemTextColor="@color/menu_text_color_selector"
            app:showAsAction="ifRoom|withText" />
        <item
            android:id="@+id/kid_profile"
            android:contentDescription="@string/content_profile"
            android:icon="@drawable/profile_color_selector"
            android:title="@string/profile"
            app:showAsAction="always|withText" />
        <item
            android:id="@+id/kid_goals"
            android:contentDescription="@string/content_goals"
            android:icon="@drawable/goals_color_selector"
            android:title="Goals"
            app:showAsAction="ifRoom|withText" />

    </group>


</menu>